--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "uvicorn backend:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: SOME_ENV_VAR
         value: "some-value"
